chapter_cicd/apps/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cicdapps
  name: cicdapps
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: cicdapps
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cicdapps
    spec:
      containers:
      - image: #argoproj/rollouts-demo:blue#
        imagePullPolicy: IfNotPresent
        name: cicdapps
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
          limits:
            memory: 84Mi
            cpu: 100m
        securityContext:
          runAsUser: 1000
          runAsGroup: 2000
          allowPrivilegeEscalation: false
      terminationGracePeriodSeconds: 15
